# reworld-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.frag  main.vert
engine/: CMakeLists.txt  engine.cpp  texture.cpp  thing.cpp
engine/include/engine/: engine.h  events.h  texture.h  thing.h
world/: CMakeLists.txt  player.cpp  world.cpp
world/include/world/: player.h  world.h
